--- a/jobs/testing/ansible/ansible-lint.gitlab-ci.yml
+++ b/jobs/testing/ansible/ansible-lint.gitlab-ci.yml
@@ -18,10 +18,10 @@ yamllint:
   script:
     - yamllint .
 
-# ansible-lint:
-#   stage: test
-#   image: $REGISTRY/automation/containers/ansible-molecule:ansible8-python3.9-latest
-#   script:
-#     - ansible-lint
+ansible-lint:
+  stage: test
+  image: $REGISTRY/automation/containers/ansible-molecule:ansible8-python3.9-latest
+  script:
+    - ansible-lint
 
 ...
