fix: TVOTTTM-589: get ansible-test and ansible-lint working again

--- a/jobs/testing/ansible/ansible-test.gitlab-ci.yml
+++ b/jobs/testing/ansible/ansible-test.gitlab-ci.yml
@@ -111,6 +111,7 @@ ansible-units:
   script:
     - cd $COLLECTION_PATH
     - ansible-test units --local --coverage
+    - git status
   # TODO archive coverage
   # TODO --local to --docker default (network issues for install requirements + python2.x)
 
