--- a/pipelines/ansible.gitlab-ci.yml
+++ b/pipelines/ansible.gitlab-ci.yml
@@ -12,7 +12,7 @@ include:
   - local: /pipelines/recommended-test-jobs.gitlab-ci.yml
   - local: /jobs/testing/ansible/ansible-lint.gitlab-ci.yml
   - local: /jobs/testing/ansible/ansible-molecule.gitlab-ci.yml
-  #- local: /jobs/testing/ansible/ansible-test.gitlab-ci.yml
+  - local: /jobs/testing/ansible/ansible-test.gitlab-ci.yml
   - local: /jobs/releasing/semantic-release.gitlab-ci.yml
 
 stages:
