--- a/jobs/testing/ansible/ansible-molecule.gitlab-ci.yml
+++ b/jobs/testing/ansible/ansible-molecule.gitlab-ci.yml
@@ -27,8 +27,7 @@ molecule:
     # Run on default branch
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
     # Run on any other branch when triggered
-    - if: $CI_COMMIT_BRANCH
-      when: manual
+    - if: '$CI_COMMIT_BRANCH && $CI_PIPELINE_SOURCE == "web"'
     # do not run otherwise
     - when: never
   variables:
