fix: Introduce yamllint
after noticing YAML can be delivered which is just broken, at least do yamllint
to verify that you don't break yaml.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,17 @@
 ---
 
-include: 
+include:
   - local: /jobs/releasing/semantic-release.gitlab-ci.yml
 
 stages:
+  - linting
   - release
+
+
+yamllint:
+  stage: linting
+  image: registry.gitlab.com/pipeline-components/yamllint:latest
+  script:
+    - yamllint .
 
 ...
