--- a/jobs/utils/aws/aws-ecr-login.gitlab-ci.yml
+++ b/jobs/utils/aws/aws-ecr-login.gitlab-ci.yml
@@ -8,10 +8,10 @@
 # - ARS_ROLE_TO_ASSUME: full ARN of the AWS Role to assume (default empty)
 # - AWS_REGION: AWS region name where your registry resides (default: eu-central-1)
 #
-# ARS_ROLE_TO_ASSUME: when not configured (aka left empty) a full login against the long lived 
+# ARS_ROLE_TO_ASSUME: when not configured (aka left empty) a full login against the long lived
 # credentials stored in ARS service will be performed. When a role is provided, first an STS/AssumeRole call
 # is made and ECR login is retrieved using short lived credentials.
-# 
+#
 # The template will provide you with some required environment variables to use in eg docker login
 #
 # The job template is ment to be included and extended as part of another job
@@ -29,7 +29,7 @@
 #    script:
 #      - docker login --username "${ECR_USERNAME}" --password "${ECR_PASSWORD}" "${ECR_REGISTRY}"
 
-.aws_ecr_login
+.aws_ecr_login:
   variables:
     ARS_AWS_PROFILE: ""
     ARS_AWS_ROLE_TO_ASSUME: ""
