--- a/pipelines/ansible.gitlab-ci.yml
+++ b/pipelines/ansible.gitlab-ci.yml
@@ -22,6 +22,8 @@ stages:
 
 sonarqube:
   allow_failure: true
+  variables:
+    SONAR_PROJECT_TAGS: ansible
   rules:
     # Do not run on tags
     - if: $CI_COMMIT_TAG
