feat: Support stable-x.x branches for ansible pipeline

--- a/pipelines/ansible.gitlab-ci.yml
+++ b/pipelines/ansible.gitlab-ci.yml
@@ -45,6 +45,8 @@ semantic-release:
   rules:
     # Run on default branch
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+    # Run on maintenanceBranches (only support for "stable-" branch pattern)
+    - if: $CI_COMMIT_BRANCH =~ /^stable-/
     # Do not run otherwise
     - when: never
 
