feat: Make kaniko build context configurable

--- a/jobs/building/containers/kaniko-ecr.gitlab-ci.yml
+++ b/jobs/building/containers/kaniko-ecr.gitlab-ci.yml
@@ -39,6 +39,8 @@ include:
   image:
     name: $REGISTRY/automation/containers/kaniko-curl
     entrypoint: [""]
+  variables:
+    KANIKO_CONTEXT: "${CI_PROJECT_DIR}"
   before_script:
     - !reference [.aws_ecr_login, before_script]
     - |-
@@ -51,6 +53,6 @@ include:
        fi
        KANIKOCFG="${KANIKOCFG} }"
        echo "${KANIKOCFG}" > /kaniko/.docker/config.json
-       KANIKO_COMMAND="/kaniko/executor --reproducible --insecure --insecure-pull --registry-mirror ${REGISTRY_GROUP} --context ${CI_PROJECT_DIR} ${KANIKOPROXYBUILDARGS} --cache=true"
+       KANIKO_COMMAND="/kaniko/executor --reproducible --insecure --insecure-pull --registry-mirror ${REGISTRY_GROUP} --context ${KANIKO_CONTEXT} ${KANIKOPROXYBUILDARGS} --cache=true"
 
 ...
