--- a/jobs/deploying/eks.gitlab-ci.yml
+++ b/jobs/deploying/eks.gitlab-ci.yml
@@ -24,12 +24,14 @@ include:
   variables:
     AWS_ENV: ""
     AWS_SPOKE_ENV: ""
+    INFRASTRUCTURE_PATH: "core-backend-platforms/ovp/infrastructure.git"
+    INFRASTRUCTURE_BRANCH: "develop"
     ARS_AWS_PROFILE: "$AWS_ACCOUNT_NAME"
     ARS_AWS_ROLE_TO_ASSUME: "arn:aws:iam::$AWS_ACCOUNT:role/$AWS_ASSUME_ROLE_FOR_DEPLOY"
   before_script:
     - !reference [.aws_assume_role, before_script]
     - echo $ANSIBLE_VAULT_PASSWORD > ~/.ansible_vault
-    - git clone "http://gitlab-access-token:${INFRASTRUCTURE_ACCESS_TOKEN}@${CI_SERVER_HOST}/core-backend-platforms/ovp/infrastructure.git" --single-branch
+    - git clone --branch ${INFRASTRUCTURE_BRANCH} "http://gitlab-access-token:${INFRASTRUCTURE_ACCESS_TOKEN}@${CI_SERVER_HOST}/${INFRASTRUCTURE_PATH}" --single-branch
     - cd infrastructure
   script:
     - ./scripts/galaxy_collections.sh
