cI: ISSTM-1230: Add additional environment variables for Gitlab Merge Requests

--- a/jobs/utils/maven-env.gitlab-ci.yml
+++ b/jobs/utils/maven-env.gitlab-ci.yml
@@ -23,6 +23,7 @@ variables:
   JGITVER_BRANCH: $CI_COMMIT_BRANCH
   RENOVATE_BOT_AUTO_RELEASE: "False"
   RENOVATE_AUTORELEASE_USER: 'renovatebot_iss'
+  INCLUDE_IN_RELEASE_PAGE: "NO"
 
 .maven-env:
   before_script:
