--- a/jobs/testing/qa/sonarqube.gitlab-ci.yml
+++ b/jobs/testing/qa/sonarqube.gitlab-ci.yml
@@ -71,6 +71,10 @@ sonarqube:
     SONAR_QUALITY_GATE_NAME: "Sonar%20way"
     SONAR_PROJECT_TAGS: ""
     SONAR_PROJECT_MONOREPO: "false"
+    SONAR_PULLREQUEST_KEY: $CI_MERGE_REQUEST_IID
+    SONAR_PULLREQUEST_BRANCH: $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME
+    SONAR_PULLREQUEST_BASE: $CI_MERGE_REQUEST_TARGET_BRANCH_NAME
+    SONAR_PULLREQUEST_PROVIDER: "GitlabSonar"
   image:
     name: sonarsource/sonar-scanner-cli:5
     entrypoint: [""]
