--- a/jobs/testing/qa/sonarqube.gitlab-ci.yml
+++ b/jobs/testing/qa/sonarqube.gitlab-ci.yml
@@ -71,16 +71,17 @@ sonarqube:
     SONAR_QUALITY_GATE_NAME: "Sonar%20way"
     SONAR_PROJECT_TAGS: ""
     SONAR_PROJECT_MONOREPO: "false"
-    SONAR_PULLREQUEST_KEY: $CI_MERGE_REQUEST_IID
-    SONAR_PULLREQUEST_BRANCH: $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME
-    SONAR_PULLREQUEST_BASE: $CI_MERGE_REQUEST_TARGET_BRANCH_NAME
-    SONAR_PULLREQUEST_PROVIDER: "GitlabSonar"
   image:
     name: sonarsource/sonar-scanner-cli:5
     entrypoint: [""]
   allow_failure: false
   script:
     - |-
+      if [ "$CI_MERGE_REQUEST_IID" != "" ]
+      then
+        echo "SonarQube should have a project with a default branch available. Checking for existing project in sonarqube..."
+        curl --fail-with-body -w '%{http_code}' -o /dev/null -sS -u "${SONAR_TOKEN_PROV}:" -X GET "${SONAR_HOST_URL}api/project_branches/list?project=${SONAR_PROJECT_KEY}"
+      fi
       if [ "$SONAR_USE_TEST_ENVIRONMENT" == "true" ]
       then
         SONAR_HOST_URL=${SONARQUBE_TEST_URL}
