fix: Add an empty needs to ecr-ensure-repository so that this job starts as soon as possible.

--- a/jobs/publishing/ecr-ensure-repository.gitlab-ci.yml
+++ b/jobs/publishing/ecr-ensure-repository.gitlab-ci.yml
@@ -39,5 +39,6 @@ ecr-ensure-repository:
   script:
     - ./scripts/galaxy_collections.sh
     - ansible-playbook site.yml -t aws-repositories -D --vault-password-file=~/.ansible_vault -e aws_env=$AWS_ENV -e aws_region=$AWS_REGION -e aws_application=$CI_PROJECT_NAME
+  needs: []
 
 ...
